hphp/hack/test/typecheck/tconst/method_swap_error.php.exp
ERROR: File "method_swap_error.php", line 17, characters 14-23:
Invalid argument (Typing[4110])
  File "method_swap_error.php", line 12, characters 24-30:
  Expected `<expr#21>::T`
  File "method_swap_error.php", line 17, characters 5-7:
    where `<expr#21>` is a reference to this expression
  File "method_swap_error.php", line 8, characters 26-32:
  But got `<expr#22>::T as X::T`
  File "method_swap_error.php", line 17, characters 14-16:
    where `<expr#22>` is a reference to this expression
ERROR: File "method_swap_error.php", line 17, characters 14-23:
Invalid argument (Typing[4110])
  File "method_swap_error.php", line 12, characters 24-30:
  Expected `<expr#21>::T`
  File "method_swap_error.php", line 17, characters 5-7:
    where `<expr#21>` is a reference to this expression
  File "method_swap_error.php", line 8, characters 26-32:
  But got `X::T where \X::T super <expr#21>::T, \X::T super <expr#22>::T, \X::T super this::T, \X::T as arraykey`
  File "method_swap_error.php", line 17, characters 14-16:
    where `<expr#22>` is a reference to this expression
ERROR: File "method_swap_error.php", line 17, characters 14-23:
Invalid argument (Typing[4110])
  File "method_swap_error.php", line 12, characters 24-30:
  Expected `<expr#21>::T`
  File "method_swap_error.php", line 17, characters 5-7:
    where `<expr#21>` is a reference to this expression
  File "method_swap_error.php", line 8, characters 26-32:
  But got `arraykey`
  File "method_swap_error.php", line 17, characters 14-16:
    where `<expr#22>` is a reference to this expression
